Updated app name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">aqqTipCalculatorApp</string>
+    <string name="app_name">TipCalculatorApp</string>
     <string name="total_per_person">Total Per Person</string>
     <string name="split">Split</string>
     <string name="tip">Tip</string>
